@@ -1,6 +1,6 @@
 
   # cat=basic; type=string; label=Image upload folder: Specify the name of the image upload folder. Default is fileadmin/user_uploads. For TYPO3 4.5 you must use uploads/pics. Create the folder uploads/tx_agency if you want to use that.
-uploadFolder = fileadmin/user_uploads
+uploadFolder = fileadmin/user_upload
 
   # cat=basic; type=string; label=Allowed image types: Specify the list of acceptable file extensions for the front end user images. Default is png, jpg, jpeg, gif, tif, tiff.
 imageTypes = png, jpg, jpeg, gif, tif, tiff
